--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
 <div class="header">
     <div class="option-ribbon">
-        <button class="ribbon-btn">< Back to main site</button>
+        <a href="https://jbaring-9r.github.io/Q2PROJECT/">
+            <button class="ribbon-btn">< Back to main site</button>
+        </a>
     </div>
 </div>
 
