--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 </head>
 <body>
 
-<div class="header">
+    <div class="header">
     <div class="option-ribbon">
+        <!-- Fix: Wrap the <button> inside the <a> tag to ensure the link works -->
         <a href="https://jbaring-9r.github.io/Q2PROJECT/">
-            <button class="ribbon-btn"> Back to main site</button>
+            <button class="ribbon-btn">< Back to main site</button>
         </a>
     </div>
 </div>
